Updated Setting For Heroku
To test locally, be sure to set Debug to True otherwise this won’t
work. But when changes are made set debug back to False for deployment
on Django.

--- a/colournaming/namebytyping/templates/namebytyping/test_speak_type.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_speak_type.html
@@ -31,7 +31,7 @@
           <h4>Restart Speech Recognition</h4>
         </div>
 
-        <div id="submitbutton" class="button" onclick="document.getElementById('input-form').submit();" name="colourname">
+        <div id="submitbutton" class="button" name="colourname">
           <h4>Submit</h4>
         </div>
 
@@ -51,3 +51,5 @@
       </div>
 
 </form>
+
+<input type="text" id="submitted" style="display:none;">
