--- a/colournaming/namebytyping/templates/namebytyping/test_type.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_type.html
@@ -23,7 +23,7 @@
       <div class="buttons-and-mic-container">
         <div class="buttons-container">
 
-          <div id="submitbutton" class="button" onclick="document.getElementById('input-form').submit();" name="colourname">
+          <div id="submitbutton" class="button" name="colourname">
             <h4>Submit</h4>
           </div>
 
@@ -38,3 +38,5 @@
       </div>
 
 </form>
+
+<input type="text" id="submitted" style="display:none;">
