--- a/colournaming/namebytyping/templates/namebytyping/complete.html
+++ b/colournaming/namebytyping/templates/namebytyping/complete.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
 
+<title>Colour Naming</title>
+
 <link rel="stylesheet" type="text/css" href="{% static 'namebytyping/style-instructions.css' %}" />
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
