--- a/colournaming/namebytyping/templates/namebytyping/practice.html
+++ b/colournaming/namebytyping/templates/namebytyping/practice.html
@@ -1,4 +1,7 @@
 {% load staticfiles %}
+
+<title>Colour Naming</title>
+
 <link rel="stylesheet" type="text/css" href="{% static 'namebytyping/style.css' %}" />
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
