--- a/colournaming/namebytyping/templates/namebytyping/test_speak_type.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_speak_type.html
@@ -1,6 +1,7 @@
 <h1>{{ session_key }}</h1>
 
 {% load staticfiles %}
+<title>Colour Naming</title>
 <link rel="stylesheet" type="text/css" href="{% static 'namebytyping/style.css' %}" />
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
