--- a/colournaming/namebytyping/templates/namebytyping/test_type_info.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_type_info.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
 
+<title>Colour Naming</title>
+
 <link rel="stylesheet" type="text/css" href="{% static 'namebytyping/style-instructions.css' %}" />
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
