--- a/colournaming/namebytyping/templates/namebytyping/practice.html
+++ b/colournaming/namebytyping/templates/namebytyping/practice.html
@@ -14,8 +14,10 @@
   <img id="shown-image" src="../../static/namebytyping/images/circled/{{ image_number }}.png"/>
 </div>
 
-<div id="interim-results">
-  <span id="interim_span" class="interim"><h4 id="spoken-text"><i>Listening...</i></h4></span>
+<div class="interim-and-count-container">
+  <div id="interim-results">
+    <span id="interim_span" class="interim"><h4 id="spoken-text"><i>Listening...</i></h4></span>
+  </div>
 </div>
 
 <form action="{% url 'namebytyping:practice_done' %}" method="post" id="input-form">
