--- a/colournaming/namebytyping/templates/namebytyping/test_type.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_type.html
@@ -19,9 +19,15 @@
 <form action="{% url 'namebytyping:submit_type' %}" method="post" id="input-form">
       {% csrf_token %}
 
-      <div id="textbox-div">
-        <input type="text" name="colourname" id="textbox" onKeyPress="return submitenter(this,event)" placeholder="Start Typing, Press Enter to Submit">
+      <div class="input-and-count-container">
+        <div class="buttons-container" id="textbox-div">
+          <input type="text" name="colourname" id="textbox" onKeyPress="return submitenter(this,event)" placeholder="Start Typing, Press Enter to Submit">
+        </div>
+        <div class="count">
+          <h4>{{count}}/40</h4>
+        </div>
       </div>
+
 
       <div class="buttons-and-mic-container">
         <div class="buttons-container">
