--- a/colournaming/namebytyping/templates/namebytyping/not_able_speech.html
+++ b/colournaming/namebytyping/templates/namebytyping/not_able_speech.html
@@ -10,7 +10,7 @@
     <div class="title"><h1>No Speech Ability</h1></div>
     <div class="instructions">
       <p>
-         Thank you for your interest, but this test must be done using voice recognition. Either because your computer does not support it (for example if you are using a phone or have an older laptop), or because the browser you are using is not the latest version of Google Chrome, you cannot use voice recognition. You can now close this tab.
+         Thank you for your interest, but this test must be done using voice recognition. You can now close this tab.
       </p>
   </div>
 
